tests/neg/i7068-b.scala
inline def species() = {
  case class FooT() // error
  FooT()
}
val foo = species()
